[package]
name = "moe-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.16.0"
bitcoincore-rpc-json = "0.16.0"
chrono = "0.4.23"
env_logger = "0.9.3"
log = "0.4.17"
num-format = "0.4.4"
reqwest = {version = "0.11.13" , features = ["blocking", "json"]}
secp256k1 = {version = "0.25.0", features = ["bitcoin-hashes", "rand-std", "serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
websocket = "0.26.5"
zmq = "0.10.0"